<resources>
    <string name="app_name">Social Media</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="new_user">New User?</string>
    <string name="go_to_sign_up">Sign up now</string>
    <string name="already">Already have an account?</string>
    <string name="go_to_login">Sign in now</string>
    <string name="reset_password">Reset Password</string>
    <string name="comment">Comment</string>
    <string name="add_post">Add Post</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="save">Save</string>
    <string name="message_box">Type a message</string>
</resources>