<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@color/purple_700">

    <TextView
        android:id="@+id/loginScreenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/login"
        android:textColor="@color/edit_text_color"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginScreenEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="@color/edit_text_color"
        android:textSize="24sp"
        android:text="yusufmendes123@gmail.com"
        android:inputType="textEmailAddress"
        android:layout_marginTop="75dp"
       android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:drawableLeft="@drawable/email"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenTextView" />

    <EditText
        android:id="@+id/loginScreenPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit_text_background"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:text="1234567"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:textColor="@color/edit_text_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenEmailEditText" />

    <TextView
        android:id="@+id/loginScreenForgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textColor="@color/edit_text_color"
        android:textSize="20sp"
        android:layout_marginLeft="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenPasswordEditText" />


    <Button
        android:id="@+id/loginScreenLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/login"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:padding="15dp"
        android:textColor="@color/button_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenForgotPasswordTextView" />

    <TextView
        android:id="@+id/loginScreenNewUserTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/new_user"
        android:textColor="@color/gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loginScreenSignUpTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenLoginButton" />

    <TextView
        android:id="@+id/loginScreenSignUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="0dp"
        android:text="@string/go_to_sign_up"
        android:textColor="@color/button_background_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginScreenNewUserTextView"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenLoginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>