<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.ChangePasswordFragment"
        android:background="@color/primary">

        <include
            android:id="@+id/backToProfileFragment"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/changePasswordScreenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/change_password"
            android:textColor="@color/edit_text_color"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backToProfileFragment" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/changePassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="10dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePasswordScreenTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordChangePasswordScreenEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password"
                android:inputType="textPassword"
                android:textColor="@color/edit_text_color"
                android:textSize="24sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newChangePassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="10dp"
            android:hint="@string/new_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordChangeNewPasswordScreenEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password"
                android:inputType="textPassword"
                android:textColor="@color/edit_text_color"
                android:textSize="24sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/retypeNewChangePassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="10dp"
            android:hint="@string/retype_new_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newChangePassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordChangeRetypeNewPasswordScreenEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password"
                android:inputType="textPassword"
                android:textColor="@color/edit_text_color"
                android:textSize="24sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/changePasswordScreenSaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/dark"
            android:padding="15dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/retypeNewChangePassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>