<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.ForgotPasswordFragment"
    android:background="@color/primary">

    <include
        android:id="@+id/backToLoginFragment"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordScreenTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPasswordScreenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/forgot_password"
        android:textColor="@color/edit_text_color"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backToLoginFragment" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgotPasswordEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordScreenTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotPasswordScreenEmailEditText"
            android:textColor="@color/edit_text_color"
            android:textSize="24sp"
            android:drawableStart="@drawable/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
             />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/forgotPasswordScreenResetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="310dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:backgroundTint="@color/dark"
        android:padding="15dp"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/button_text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>